--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
 				 <input type="text" name="name" value="" placeholder="用户名">
 				 <button type="submit">搜索</button>
 			 </form>
-				<table class="table ajax-table" data-url="{:url('data')}" data-filter="#form1" data-size="4" data-sizes="4,20,30" >
+				<table class="table ajax-table" data-url="data.json" data-filter="#form1" data-size="4" data-sizes="4,20,30" >
 					<thead>
 					</thead>
 					<tbody>
